2005-06-29  Geoffrey Garen  <ggaren@apple.com>

	DOM compatibility tests for HTMLDocument::write

        Reviewed by justing.

        Test cases added: 
        * layout-tests/fast/dom/HTMLDocument/write/call-expected.txt: Added.
        * layout-tests/fast/dom/HTMLDocument/write/call.html: Added.

2005-06-29  Geoffrey Garen  <ggaren@apple.com>

	DOM compatibility tests for HTMLDocument::title

        Reviewed by justing.

        Test cases added: 
        * layout-tests/fast/dom/HTMLDocument/title/get-expected.txt: Added.
        * layout-tests/fast/dom/HTMLDocument/title/get.html: Added.
        * layout-tests/fast/dom/HTMLDocument/title/set-expected.txt: Added.
        * layout-tests/fast/dom/HTMLDocument/title/set.html: Added.

2005-06-28  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

        Added iterator support to new hashtable class, the HashSet API is
	now essentially complete.

	Added support for consistency check mode.

        * khtml/misc/hashset.h:
        (khtml::HashSet::capacity): Added
        (khtml::HashSet::begin): Added (both const and non-const)
        (khtml::HashSet::end): Added (both const and non-const)
        (khtml::HashSet::insert): Made both versions return an iterator
        (khtml::HashSet::find): Added (both const and on-const, returning appropriate iterator)
        (khtml::HashSet::contains): Added
        (khtml::HashSet::remove): Added version that takes an iterator argument
        (khtml::HashSet::clear): Added
        * khtml/misc/hashtable.h:
        (khtml::HashTableIterator): New class with all the obvious iterator stuff.
        (khtml::HashTableConstIterator::HashTableConstIterator): New class with all the obvious
	const iterator stuff.
        (khtml::HashTable::begin): Added (both const and non-consts)
        (khtml::HashTable::end): Added (both const and non-consts)
        (khtml::HashTable::capacity): Added
        (khtml::HashTable::insert): Implement non-template method in terms